Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0
-
-
6f995b5e2 (dev), 81395d94e (6.7)
Description
This is a stack trace from a sentry provided dump for our app:
KERNELBASE.dll!RaiseException() Unknown Non-user code. Symbols loaded without source information. VCRUNTIME140.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 75 C++ Non-user code. Symbols loaded. qwindows.dll!winrt::throw_hresult(const winrt::hresult result) Line 4969 C++ Symbols loaded. [Inline Frame] qwindows.dll!winrt::check_hresult(const winrt::hresult) Line 5039 C++ Symbols loaded. [Inline Frame] qwindows.dll!winrt::impl::consume_Windows_UI_Notifications_IBadgeUpdateManagerStatics<winrt::Windows::UI::Notifications::IBadgeUpdateManagerStatics>::CreateBadgeUpdaterForApplication() Line 102 C++ Symbols loaded. [Inline Frame] qwindows.dll!winrt::Windows::UI::Notifications::BadgeUpdateManager::CreateBadgeUpdaterForApplication::__l2::<lambda_2da321d2896d3c81cf5fd31cefea45dc>::operator()(const winrt::Windows::UI::Notifications::IBadgeUpdateManagerStatics &) Line 3574 C++ Symbols loaded. qwindows.dll!<lambda_2da321d2896d3c81cf5fd31cefea45dc>::<lambda_invoker_cdecl>(const winrt::Windows::UI::Notifications::IBadgeUpdateManagerStatics & f) Line 3574 C++ Symbols loaded. qwindows.dll!winrt::impl::factory_cache_entry<winrt::Windows::UI::Notifications::BadgeUpdateManager,winrt::Windows::UI::Notifications::IBadgeUpdateManagerStatics>::call<winrt::Windows::UI::Notifications::BadgeUpdater (__cdecl*)(winrt::Windows::UI::Notifications::IBadgeUpdateManagerStatics const &)>(winrt::Windows::UI::Notifications::BadgeUpdater(*)(const winrt::Windows::UI::Notifications::IBadgeUpdateManagerStatics &) && callback) Line 6319 C++ Symbols loaded. [Inline Frame] qwindows.dll!winrt::impl::call_factory_cast(winrt::Windows::UI::Notifications::BadgeUpdateManager::CreateBadgeUpdaterForApplication::__l2::<lambda_2da321d2896d3c81cf5fd31cefea45dc> &&) Line 6372 C++ Symbols loaded. [Inline Frame] qwindows.dll!winrt::Windows::UI::Notifications::BadgeUpdateManager::CreateBadgeUpdaterForApplication() Line 3574 C++ Symbols loaded. qwindows.dll!QWindowsIntegration::setApplicationBadge(__int64 number) Line 672 C++ Symbols loaded. > qwindows.dll!QWindowsContext::windowsProc(HWND__ * hwnd, unsigned int message, QtWindows::WindowsEventType et, unsigned __int64 wParam, __int64 lParam, __int64 * result, QWindowsWindow * * platformWindowPtr) Line 1299 C++ Symbols loaded. qwindows.dll!qWindowsWndProc(HWND__ * hwnd, unsigned int message, unsigned __int64 wParam, __int64 lParam) Line 1477 C++ Symbols loaded. ...
The entry point here is: qwindowscontext.cpp: #1298: "QWindowsIntegration::instance()->updateApplicationBadge()"
Attachments
Issue Links
- relates to
-
QTBUG-117845 Unable to run on Gitlab CI / Windows Server Core docker image due to Windows(.UI(.ViewManagement)).dll
-
- Reported
-
- resulted from
-
QTBUG-94009 Add API to set overlay for application icon
-
- Open
-
For Gerrit Dashboard: QTBUG-117091 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
557915,1 | Windows: Prevent potential "crash" in setApplicationBadge | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: NEW | +2 | 0 |
554581,2 | Windows: Prevent potential "crash" in setApplicationBadge | dev | qt/qtbase | Status: MERGED | +2 | 0 |
557760,2 | Windows: Prevent potential "crash" in setApplicationBadge | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |