Windows: Prevent potential "crash" in setApplicationBadge

In some circumstances our application badge code seems to throw an
exception. The issue is hard to reproduce but just catching the
exception should be enough to fall back to the "non-winrt" version of
the code.

Fixes: QTBUG-117091
Pick-to: 6.5
Change-Id: I61f4e59f7309e2bb47b50a6ca6f3099ed9cd0af1
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 6f995b5e246bd9cc56710fa9cebc6dbb7cb2b72f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>